docs/api/qiskit/0.24/qiskit.aqua.operators.legacy.LegacyBaseOperator.mdx
---
title: LegacyBaseOperator
description: API reference for qiskit.aqua.operators.legacy.LegacyBaseOperator
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.operators.legacy.LegacyBaseOperator
---

<span id="qiskit-aqua-operators-legacy-legacybaseoperator" />

# qiskit.aqua.operators.legacy.LegacyBaseOperator

<Class id="qiskit.aqua.operators.legacy.LegacyBaseOperator" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/operators/legacy/base_operator.py" signature="LegacyBaseOperator(basis=None, z2_symmetries=None, name=None)">
  Operators relevant for quantum applications.

  Constructor.

  ### \_\_init\_\_

  <Function id="qiskit.aqua.operators.legacy.LegacyBaseOperator.__init__" name="__init__" signature="abstract __init__(basis=None, z2_symmetries=None, name=None)">
    Constructor.
  </Function>

  ## Methods

  |                                                                                                                                                                                                                   |                                                                                                                                                                                                                                                                                                                  |
  | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.aqua.operators.legacy.LegacyBaseOperator.__init__ "qiskit.aqua.operators.legacy.LegacyBaseOperator.__init__")(\[basis, z2\_symmetries, name])                                                | Constructor.                                                                                                                                                                                                                                                                                                     |
  | [`chop`](#qiskit.aqua.operators.legacy.LegacyBaseOperator.chop "qiskit.aqua.operators.legacy.LegacyBaseOperator.chop")(threshold\[, copy])                                                                        |                                                                                                                                                                                                                                                                                                                  |
  | [`construct_evaluation_circuit`](#qiskit.aqua.operators.legacy.LegacyBaseOperator.construct_evaluation_circuit "qiskit.aqua.operators.legacy.LegacyBaseOperator.construct_evaluation_circuit")(wave\_function, …) | Build circuits to compute the expectation w\.r.t the wavefunction.                                                                                                                                                                                                                                               |
  | [`evaluate_with_result`](#qiskit.aqua.operators.legacy.LegacyBaseOperator.evaluate_with_result "qiskit.aqua.operators.legacy.LegacyBaseOperator.evaluate_with_result")(result, …)                                 | Consume the result from the quantum computer to build the expectation, will be only used along with the [`construct_evaluation_circuit()`](#qiskit.aqua.operators.legacy.LegacyBaseOperator.construct_evaluation_circuit "qiskit.aqua.operators.legacy.LegacyBaseOperator.construct_evaluation_circuit") method. |
  | [`evolve`](#qiskit.aqua.operators.legacy.LegacyBaseOperator.evolve "qiskit.aqua.operators.legacy.LegacyBaseOperator.evolve")(state\_in, evo\_time, num\_time\_slices, …)                                          | Time evolution, exp^(-jt H).                                                                                                                                                                                                                                                                                     |
  | [`is_empty`](#qiskit.aqua.operators.legacy.LegacyBaseOperator.is_empty "qiskit.aqua.operators.legacy.LegacyBaseOperator.is_empty")()                                                                              | Check Operator is empty or not                                                                                                                                                                                                                                                                                   |
  | [`print_details`](#qiskit.aqua.operators.legacy.LegacyBaseOperator.print_details "qiskit.aqua.operators.legacy.LegacyBaseOperator.print_details")()                                                               | print details                                                                                                                                                                                                                                                                                                    |
  | [`to_opflow`](#qiskit.aqua.operators.legacy.LegacyBaseOperator.to_opflow "qiskit.aqua.operators.legacy.LegacyBaseOperator.to_opflow")()                                                                           | Convert to new Operator format.                                                                                                                                                                                                                                                                                  |

  ## Attributes

  |                                                                                                                                                   |                                       |
  | ------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------- |
  | [`basis`](#qiskit.aqua.operators.legacy.LegacyBaseOperator.basis "qiskit.aqua.operators.legacy.LegacyBaseOperator.basis")                         | returns basis                         |
  | [`name`](#qiskit.aqua.operators.legacy.LegacyBaseOperator.name "qiskit.aqua.operators.legacy.LegacyBaseOperator.name")                            | returns name                          |
  | [`num_qubits`](#qiskit.aqua.operators.legacy.LegacyBaseOperator.num_qubits "qiskit.aqua.operators.legacy.LegacyBaseOperator.num_qubits")          | Returns number of qubits for operator |
  | [`z2_symmetries`](#qiskit.aqua.operators.legacy.LegacyBaseOperator.z2_symmetries "qiskit.aqua.operators.legacy.LegacyBaseOperator.z2_symmetries") | returns z2 symmetries                 |

  ### basis

  <Function id="qiskit.aqua.operators.legacy.LegacyBaseOperator.basis" name="basis" signature="property basis">
    returns basis
  </Function>

  ### chop

  <Function id="qiskit.aqua.operators.legacy.LegacyBaseOperator.chop" name="chop" signature="abstract chop(threshold, copy=False)" />

  ### construct\_evaluation\_circuit

  <Function id="qiskit.aqua.operators.legacy.LegacyBaseOperator.construct_evaluation_circuit" name="construct_evaluation_circuit" signature="abstract construct_evaluation_circuit(wave_function, statevector_mode, **kwargs)">
    Build circuits to compute the expectation w\.r.t the wavefunction.
  </Function>

  ### evaluate\_with\_result

  <Function id="qiskit.aqua.operators.legacy.LegacyBaseOperator.evaluate_with_result" name="evaluate_with_result" signature="abstract evaluate_with_result(result, statevector_mode, **kwargs)">
    Consume the result from the quantum computer to build the expectation, will be only used along with the [`construct_evaluation_circuit()`](#qiskit.aqua.operators.legacy.LegacyBaseOperator.construct_evaluation_circuit "qiskit.aqua.operators.legacy.LegacyBaseOperator.construct_evaluation_circuit") method.
  </Function>

  ### evolve

  <Function id="qiskit.aqua.operators.legacy.LegacyBaseOperator.evolve" name="evolve" signature="abstract evolve(state_in, evo_time, num_time_slices, expansion_mode, expansion_order, **kwargs)">
    Time evolution, exp^(-jt H).
  </Function>

  ### is\_empty

  <Function id="qiskit.aqua.operators.legacy.LegacyBaseOperator.is_empty" name="is_empty" signature="abstract is_empty()">
    Check Operator is empty or not
  </Function>

  ### name

  <Function id="qiskit.aqua.operators.legacy.LegacyBaseOperator.name" name="name" signature="property name">
    returns name
  </Function>

  ### num\_qubits

  <Function id="qiskit.aqua.operators.legacy.LegacyBaseOperator.num_qubits" name="num_qubits" signature="abstract property num_qubits">
    Returns number of qubits for operator
  </Function>

  ### print\_details

  <Function id="qiskit.aqua.operators.legacy.LegacyBaseOperator.print_details" name="print_details" signature="abstract print_details()">
    print details
  </Function>

  ### to\_opflow

  <Function id="qiskit.aqua.operators.legacy.LegacyBaseOperator.to_opflow" name="to_opflow" signature="abstract to_opflow()">
    Convert to new Operator format.
  </Function>

  ### z2\_symmetries

  <Function id="qiskit.aqua.operators.legacy.LegacyBaseOperator.z2_symmetries" name="z2_symmetries" signature="property z2_symmetries">
    returns z2 symmetries
  </Function>
</Class>

